<resources>
    <string name="app_name">RainbowStories</string>
    <string name="menu_title_discover">Discover</string>
    <string name="menu_title_my_stories">My stories</string>
    <string name="menu_title_favorites">Favorites</string>
    <string name="menu_title_scheduler">Scheduler</string>
    <string name="option_menu_title_search">Search</string>
    <string name="option_menu_title_pictureGallery">Picture gallery</string>
    <string name="option_menu_title_profile">Profile</string>
    <string name="likes">likes</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="nickname">Nickname</string>
    <string name="bio">Bio</string>
    <string name="update_profile">Update profile</string>
    <string name="delete_account">Delete account</string>
    <string name="take_new_photo">Take new photo</string>
    <string name="import_from_phone_gallery">Import from phone gallery</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="media_channel_id_description">This notification channel is for notifying about media upload and download progress</string>
    <string name="media_channel_id_title">Media upload and download</string>
    <string name="ok">OK</string>
    <string name="unexpected_error">Unexpected error occurred</string>
    <string name="error_occurred">Error occurred</string>
    <string name="Media_upload">Media upload</string>
    <string name="uploaded">Uploaded</string>
    <string name="uploading">Uploading</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_menu_picture_editor">Picture editor</string>
    <string name="back">Back</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="search_hint">Search</string>
    <string name="tag">Tag</string>
    <string name="recent">Recent</string>
    <string name="story_name">Story name</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="password_not_valid">Password must be a combination of at least 6 letters or digits</string>
    <string name="you_must_enter_password">You must enter password</string>
    <string name="you_must_enter_username">You must enter user name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="you_must_enter_email">You have to enter email</string>
    <string name="you_have_to_enter_nickname">You have to enter nick name!</string>
    <string name="you_have_to_enter_last_name">You have to enter last name!</string>
    <string name="you_have_to_enter_first_name">You have to enter first name!</string>
    <string name="confirm_password_error">Passwords do not match</string>
    <string name="option_menu_title_search_result">Search result</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="option_menu_change_password">Change password</string>
    <string name="delete_picture">Delete picture</string>
    <string name="option_menu_title_picture_viewer">Picture viewer</string>
    <string name="you_must_be_connected_to_internet">You must be connected to the internet!</string>
    <string name="loading">Loading</string>
    <string name="splash">Splash</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="media_delete">Deleting media</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>