<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etFirstName"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLastName"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNickName"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etBio"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bio"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="top"
                android:lines="8" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            style="@style/AppTheme.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/progress_bar_margin"
            android:indeterminate="true"
            android:visibility="gone"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:showAnimationBehavior="none"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnSaveProfileChanges"
            style="@style/AppTheme.NormalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/AppTheme.NormalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLogOut"
            style="@style/AppTheme.NormalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out" />

        <Button
            android:id="@+id/btnChangePassword"
            style="@style/AppTheme.NormalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/btnUpdateProfile"
            style="@style/AppTheme.NormalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile" />

        <Button
            android:id="@+id/btnDeleteAccount"
            style="@style/AppTheme.NormalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account" />

    </LinearLayout>

</ScrollView>