<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entry_activity_navigation"
    app:startDestination="@id/signIn">

    <fragment
        android:id="@+id/signIn"
        android:name="hr.rainbow.ui.SignInFragment"
        tools:layout="@layout/fragment_sign_in"
        android:label="@string/sign_in">
        <action
            android:id="@+id/action_signIn_to_splashScreen"
            app:destination="@id/splashScreen" />
    </fragment>

    <fragment
        android:id="@+id/signUp"
        android:name="hr.rainbow.ui.SignUpFragment"
        tools:layout="@layout/fragment_sign_up"
        android:label="@string/sign_up">
        <action
            android:id="@+id/action_signUp_to_splashScreen"
            app:destination="@id/splashScreen" />
    </fragment>

    <fragment
        android:id="@+id/splashScreen"
        android:name="hr.rainbow.ui.SplashFragment"
        tools:layout="@layout/fragment_splash"
        android:label="@string/splash"/>

</navigation>