<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/sign_up_margin_top"
        tools:context=".ui.SignUpFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_up_text_field_margin"
            android:enabled="true"
            app:errorEnabled="true"
            android:hint="@string/email"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etFirstName"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_up_text_field_margin"
            android:hint="@string/first_name"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLastName"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_up_text_field_margin"
            android:hint="@string/last_name"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:layout_constraintTop_toBottomOf="@id/etFirstName"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNickName"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_up_text_field_margin"
            android:hint="@string/nickname"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:layout_constraintTop_toBottomOf="@id/etLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etBio"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_up_text_field_margin"
            android:hint="@string/bio"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:layout_constraintTop_toBottomOf="@id/etNickName"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/etBio"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etConfirmPassword"
            style="@style/AppTheme.TextFieldLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:theme="@style/AppTheme.TextFieldLayoutTheme"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword">

            <Button
                android:id="@+id/btnCancel"
                style="@style/AppTheme.NegativeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sign_up_text_field_margin"
                android:layout_weight="1"
                android:text="@string/cancel" />


            <Button
                android:id="@+id/btnRegister"
                style="@style/AppTheme.PositiveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sign_up_text_field_margin"
                android:layout_weight="1"
                android:text="@string/register" />

        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            style="@style/AppTheme.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="20dp"
            android:indeterminate="true"
            android:visibility="gone"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"
            app:showAnimationBehavior="none"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>